<resources>
    <string name="app_name">Memoloop</string>
    <string name="loading">Loading....</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create a New Account</string>
    <string name="reset_instruction">To Reset Your Password, Please Enter your Email</string>
    <string name="verify_instruction">Please Enter The Verification Code Sent to your Email</string>
    <string name="verify_here">Verify here</string>
    <string name="new_creds_instruction">Please Enter New Credentials Here</string>
    <string name="my_tasks">My Tasks</string>
    <string name="task_title">Task Title</string>
    <string name="due_date">Due Date</string>
    <string name="status">Status</string>
    <string name="confirm_task">Confirm Task</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_info">User Info.</string>
    <string name="edit_info">Edit Info.</string>
    <string name="edit">Edit</string>
    <string name="sign_out">Sign-Out</string>
    <string name="exit">Exit</string>
    <string name="app_version">App Version\nMemoloop 1.1</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="add_new_task">Add New Task</string>
    <string name="or">or</string>
    <string name="back">Back</string>
    <string name="app_logo_desc">App Logo</string>
    <string name="reset_password_instruction">To Reset Your Password, Please Enter your Email</string>
    <string name="agree_rules">I agreed to the all rules and regulations</string>
</resources>