<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpActivity">

    <ImageButton
        android:id="@+id/btnBackSU"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_button_bg"
        android:src="@android:drawable/ic_menu_revert"
        app:tint="@color/black"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivSmallLogoSU"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/app_logo"
        android:contentDescription="@string/app_logo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSignUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSmallLogoSU" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="60dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvSignUpTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <EditText
                android:id="@+id/etSUUsername"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edit_text_pill"
                android:hint="@string/username"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="14sp"
                android:inputType="text" />

            <EditText
                android:id="@+id/etSUEmail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edit_text_pill"
                android:hint="@string/email"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="14sp"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etSUPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edit_text_pill"
                android:hint="@string/password"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="14sp"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/etSUConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edit_text_pill"
                android:hint="@string/confirm_password"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="14sp"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/cbTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/agree_rules"
                android:textSize="11sp" />

            <Button
                android:id="@+id/btnSignUpSubmit"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/black"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                app:cornerRadius="25dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>