<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/main_card_bg"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_task"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_pill"
        android:hint="@string/task_title"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:inputType="textCapSentences"
        app:layout_constraintTop_toBottomOf="@id/tvDialogTitle" />

    <EditText
        android:id="@+id/etDueDate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_pill"
        android:hint="@string/due_date"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/etTaskTitle" />

    <Button
        android:id="@+id/btnConfirmAdd"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/black"
        android:text="@string/confirm"
        android:textColor="@color/white"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDueDate" />

    <Button
        android:id="@+id/btnCancelAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/cancel"
        android:textColor="@color/gray_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnConfirmAdd" />

</androidx.constraintlayout.widget.ConstraintLayout>