<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EditInfoActivity">

    <ImageView
        android:id="@+id/ivEditLogoTop"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/app_logo"
        android:contentDescription="@string/app_logo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEdit"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivEditLogoTop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEditUsername"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_pill"
                android:hint="@string/username"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etEditEmail"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_pill"
                android:hint="@string/email"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:inputType="textEmailAddress" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btnEditCancel"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    android:backgroundTint="@color/red_cancel"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/btnEditConfirm"
                    android:layout_width="110dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="@color/green_confirm"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:cornerRadius="25dp" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnEditSignOut"
        android:layout_width="189dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvEdit" />

    <ImageView
        android:id="@+id/ivEditFooterLogo"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/app_logo"
        android:contentDescription="@string/app_logo_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>