<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ResetPasswordActivity">

    <ImageButton
        android:id="@+id/btnBackReset"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_button_bg"
        android:src="@android:drawable/ic_menu_revert"
        app:tint="@color/black"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivResetLogo"
        android:layout_width="215dp"
        android:layout_height="83dp"
        android:layout_marginTop="83dp"
        android:src="@drawable/app_logo"
        android:contentDescription="@string/app_logo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/reset_instruction"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivResetLogo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvResetEmail"
        android:layout_width="363dp"
        android:layout_height="145dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="60dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResetTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/reset_card_bg">

            <EditText
                android:id="@+id/etResetEmail"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_pill"
                android:hint="@string/email"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnResetSubmit"
        android:layout_width="189dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvResetEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>